--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <title>This project complete with Programming Shikhbo.</title>
 </head>
 <body>
-    i am learning web.
-    i am from bangladesh.
+    <header>
+        <nav id="navigation">
+            <div>
+                <h1 class="tooltip">Tanjib Hasan Rakib 
+                    <span class="tooltip-text">Hi! I am a Programmer.</span>
+                </h1>
+            </div>
+
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Service</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
